# voxel-engine

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fmt.sh
apps/editor/: Cargo.toml
apps/editor/src/: main.rs
apps/sandbox/: Cargo.toml
apps/sandbox/src/: main.rs  voxel.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/engine/src/debug/: chunk_gen.rs
crates/engine/src/terrain/: constants.rs
crates/engine/src/terrain/defs/: voxel.rs
crates/engine/src/terrain/ecs/components/: chunk.rs
crates/engine/src/terrain/generator/: generator.rs  heightmap.rs  noise.rs
crates/engine/src/terrain/meshing/: bevy_meshing.rs  greedy.rs  mesh_data.rs
crates/engine/src/terrain/plugins/: terrain.rs
crates/engine/src/terrain/tasks/: terrain.rs
crates/engine/src/terrain/types/: voxel.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs
crates/scene/: Cargo.toml
crates/scene/src/: lib.rs
examples/: hello_triangle.rs  sprites.rs
tools/asset_compiler/: Cargo.toml
tools/asset_compiler/src/: main.rs
tools/level_packer/: Cargo.toml
tools/level_packer/src/: main.rs
(+2 files in other folders)
